# create-soroban-dapp

./: .gitmodules  .prettierrc.js  README.md  index.js  package-lock.json  package.json  pnpm-lock.yaml  scf-20.md  web3dev_sesion_4.md
.idx/: dev.nix
docs/: README.md  book.toml
soroban-react-dapp/: .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  README.md  docker-compose.yml  initialize.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  preview_version.json  quickstart.sh  run.sh  tsconfig.json  vercel.json
soroban-react-dapp/contracts/greeting/: Cargo.toml  README_CHALLENGE.md  README_Desafio  greeting.test.ts
soroban-react-dapp/contracts/greeting/src/: auth.rs  constants.rs  error.rs  lib.rs  test.rs
soroban-react-dapp/contracts/greeting/src/instruction/: auth.rs  init.rs  mod.rs  util.rs
soroban-react-dapp/contracts/greeting/test_snapshots/test/: e2e.1.json  test.1.json  test_add_and_remove_editor.1.json  test_add_editor.1.json  test_authorized_invocation.1.json  test_fetch_editors.1.json  test_init.1.json  test_init_and_set_title.1.json  test_remove_editor.1.json  test_search.1.json  test_set_and_read_title.1.json  test_set_title.1.json  test_unauthorized_set_greet.1.json  test_unauthorized_set_title.1.json
soroban-react-dapp/contracts/tweaked_greeting/: Cargo.toml  contract_ids.json
soroban-react-dapp/contracts/tweaked_greeting/scripts/: deploy_on_testnet.sh
soroban-react-dapp/contracts/tweaked_greeting/src/: lib.rs  test.rs
soroban-react-dapp/greeting_contract/: Cargo.toml
soroban-react-dapp/greeting_contract/scripts/: deploy_on_testnet.sh
test-react-create-app/: package.json
(+198 files in other folders)
