[package]
name = "title-contract"
version = "0.0.1"
authors = ["esteblock"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false
 
[dependencies] 
soroban-sdk = { version = "20.0.0-rc2"} 


[dev_dependencies]
soroban-sdk = { version = "20.0.0-rc2",features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true